# streamlit-zeroshot-classifier

./: pyproject.toml  requirements.txt  streamlit.py
