[tool.poetry]
name = "streamlit-playground"
version = "0.1.0"
description = ""
authors = ["Arda Can Aras <ardaaras99@gmail.com>"]
readme = "README.md"
packages = [{include = "streamlit_playground"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.10"
typing-extensions = "^4.5.0"
toml = "^0.10.2"
numpy = "^1.24.2"
pandas = "^1.5.3"
streamlit = "^1.20.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
